--- a/mars-by-curiosity/package.json
+++ b/mars-by-curiosity/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~49.0.6",
+    "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.46.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.28.0",
