--- a/mars-by-curiosity/tsconfig.json
+++ b/mars-by-curiosity/tsconfig.json
@@ -16,5 +16,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "*/": ["src/"]
+    },
   },
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
