--- a/mars-by-curiosity/package.json
+++ b/mars-by-curiosity/package.json
@@ -9,12 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.6",
     "expo-app-loading": "^2.1.1",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.3",
+    "react-native-date-picker": "^4.2.14",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.9.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.11.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
@@ -30,6 +41,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-native": "^4.0.0",
+    "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.6"
   },
   "private": true
