refactor: change date format, add svg

--- a/mars-by-curiosity/tsconfig.json
+++ b/mars-by-curiosity/tsconfig.json
@@ -19,7 +19,12 @@
     "baseUrl": ".",
     "paths": {
       "*/": ["src/"]
-    },
+    }
   },
-  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
